--- a/src/style.scss
+++ b/src/style.scss
@@ -18,12 +18,11 @@
 
 html,
 body {
-  @apply h-full w-full dark:bg-zinc-950 dark:text-gray-100;
+  @apply dark:bg-zinc-950 dark:text-gray-100;
 }
 
-main,
-#app {
-  @apply flex flex-col items-center justify-center h-full w-8/12 mx-auto;
+.default-container {
+  @apply max-w-7xl w-full mx-auto px-6 sm:px-8;
 }
 
 .poppins-light {
