Add tailwind color palette generator

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,18 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --twc-theme-50: #fefde8;
+  --twc-theme-100: #fefdc3;
+  --twc-theme-200: #fdf88b;
+  --twc-theme-300: #fceb48;
+  --twc-theme-400: #f9db1a;
+  --twc-theme-500: #e9c109;
+  --twc-theme-600: #c99705;
+  --twc-theme-700: #a06c08;
+  --twc-theme-800: #84550f;
+  --twc-theme-900: #714512;
+  --twc-theme-950: #422406;
 }
 
 html,
