Add secondary color palette

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  // Theme1
   --twc-theme-50: #fefde8;
   --twc-theme-100: #fefdc3;
   --twc-theme-200: #fdf88b;
@@ -25,6 +26,19 @@
   --twc-theme-800: #84550f;
   --twc-theme-900: #714512;
   --twc-theme-950: #422406;
+
+  // Theme2
+  --twc-theme2-50: #fefde8;
+  --twc-theme2-100: #fefdc3;
+  --twc-theme2-200: #fdf88b;
+  --twc-theme2-300: #fceb48;
+  --twc-theme2-400: #f9db1a;
+  --twc-theme2-500: #e9c109;
+  --twc-theme2-600: #c99705;
+  --twc-theme2-700: #a06c08;
+  --twc-theme2-800: #84550f;
+  --twc-theme2-900: #714512;
+  --twc-theme2-950: #422406;
 }
 
 html,
