--- a/src/style.scss
+++ b/src/style.scss
@@ -48,6 +48,18 @@ body {
   @apply dark:bg-zinc-950 dark:text-gray-100;
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+  background-color: var(--twc-theme-100);
+  height: 2px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--twc-theme-500);
+  border-radius: 10px;
+}
+
 .default-container {
   @apply max-w-5xl w-full mx-auto px-6 sm:px-8;
 }
