Update navbar and linking

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,17 +30,17 @@
   --twc-theme-950: #422406;
 
   // Theme2
-  --twc-theme2-50: #fefde8;
-  --twc-theme2-100: #fefdc3;
-  --twc-theme2-200: #fdf88b;
-  --twc-theme2-300: #fceb48;
-  --twc-theme2-400: #f9db1a;
-  --twc-theme2-500: #e9c109;
-  --twc-theme2-600: #c99705;
-  --twc-theme2-700: #a06c08;
-  --twc-theme2-800: #84550f;
-  --twc-theme2-900: #714512;
-  --twc-theme2-950: #422406;
+  --twc-theme2-50: #fff;
+  --twc-theme2-100: #fff;
+  --twc-theme2-200: #fff;
+  --twc-theme2-300: #fff;
+  --twc-theme2-400: #fff;
+  --twc-theme2-500: #fff;
+  --twc-theme2-600: #fff;
+  --twc-theme2-700: #fff;
+  --twc-theme2-800: #fff;
+  --twc-theme2-900: #fff;
+  --twc-theme2-950: #fff;
 }
 
 html,
