Update primary theme colors

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,17 +17,17 @@
   -webkit-text-size-adjust: 100%;
 
   // Theme1
-  --twc-theme-50: #fefde8;
-  --twc-theme-100: #fefdc3;
-  --twc-theme-200: #fdf88b;
-  --twc-theme-300: #fceb48;
-  --twc-theme-400: #f9db1a;
-  --twc-theme-500: #e9c109;
-  --twc-theme-600: #c99705;
-  --twc-theme-700: #a06c08;
-  --twc-theme-800: #84550f;
-  --twc-theme-900: #714512;
-  --twc-theme-950: #422406;
+  --twc-theme-50: #fef9ee;
+  --twc-theme-100: #fcf2d8;
+  --twc-theme-200: #f8e2b0;
+  --twc-theme-300: #f4cf88;
+  --twc-theme-400: #edab4a;
+  --twc-theme-500: #e99326;
+  --twc-theme-600: #da791c;
+  --twc-theme-700: #b55e19;
+  --twc-theme-800: #904a1c;
+  --twc-theme-900: #743e1a;
+  --twc-theme-950: #3f1e0b;
 
   // Theme2
   --twc-theme2-50: #fff;
